# Notebook_to_pdf_AI_Agent

ai-project-2/: .gitignore  02_MLR_Project.ipynb  50_startups_dataset.csv  main.py  pyproject.toml
notebook_to_pdf_agent/: .gitignore  main.py  pyproject.toml  question.ipynb
